--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@
 #
 version: 2
 jobs:
-build:
-docker:
+  build:
+    docker:
 # Use the same Docker base as the project
-- image: python:3.7.3-stretch
+    - image: python:3.7.3-stretch
 
 working_directory: ~/repo
 
@@ -22,14 +22,14 @@ keys:
 - v1-dependencies-
 
 - run:
-name: install dependencies
-command: |
-python3 -m venv venv
-source venv/bin/activate
-make install
+  name: install dependencies
+  command: |-
+    python3 -m venv venv
+    . venv/bin/activate
+    make install
 # Install hadolint
-wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
-chmod +x /bin/hadolint
+  wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
+  chmod +x /bin/hadolint
 - save_cache:
 paths:
 - ./venv
@@ -38,6 +38,6 @@ key: v1-dependencies-{{ checksum "requirements.txt" }}
 # run lint!
 - run:
 name: run lint
-command: |
-. venv/bin/activate
-make lint 
+command: |-
+  . venv/bin/activate
+  make lint 
