--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,38 +6,50 @@ version: 2
 jobs:
   build:
     docker:
-# Use the same Docker base as the project
-    - image: python:3.7.3-stretch
+      # specify the version you desire here
+      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
+      - image: circleci/python:3.6.1
 
-working_directory: ~/repo
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
 
-steps:
-- checkout
+    working_directory: ~/repo
 
-# Download and cache dependencies
-- restore_cache:
-keys:
-- v1-dependencies-{{ checksum "requirements.txt" }}
-# fallback to using the latest cache if no exact match is found
-- v1-dependencies-
+    steps:
+      - checkout
 
-- run:
-  name: install dependencies
-  command: |-
-    python3 -m venv venv
-    . venv/bin/activate
-    make install
-# Install hadolint
-    wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
-    chmod +x /bin/hadolint
-- save_cache:
-paths:
-- ./venv
-key: v1-dependencies-{{ checksum "requirements.txt" }}
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
 
-# run lint!
-- run:
-  name: run lint
-  command: |-
-    . venv/bin/activate
-    make lint 
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
+
+      # run tests!
+      # this example uses Django's built-in test-runner
+      # other common Python testing frameworks include pytest and nose
+      # https://pytest.org
+      # https://nose.readthedocs.io
+      - run:
+          name: run tests
+          command: |
+            . venv/bin/activate
+            python manage.py test
+
+      - store_artifacts:
+          path: test-reports
+          destination: test-reports
